# rust-elgamal

./: Cargo.toml
benches/: elgamal_benchmarks.rs
src/: dl_solvers.rs  elgamal.rs  lib.rs  prime.rs
