[package]
name = "elgamal"
version = "0.0.2"
edition = "2018"
authors = [
    "Omer <omer.shlomovits@gmail.com>",
    "Bernhard <boneyard93501@gmail.com>"
]

license = "GPL-3.0-or-later"
categories = ["cryptography"]

[lib]
crate-type = ["lib"]

[dependencies]
rayon = "1.1"
serde = { version = "1.0", features = ["derive"] }

[dependencies.curv-kzen]
version = "0.9.0"
default-features = false
features = ["num-bigint"]
